[3] Remove Guava usage
Bug: https://github.com/eclipse-ecoretools/ecoretools/issues/3
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>